gitlab done, now let's go jenkins

--- a/dashboard/templates/gitlab.html
+++ b/dashboard/templates/gitlab.html
@@ -12,19 +12,21 @@
                 <table class="table table-striped table-responsive">
                     <thead>
                         <tr>
-                            <th>Email</th>
-                            <th>Usuário</th>
-                            <th>Status</th>
-                            <th>Admin</th>
+                            <th>E-mail</th>
+                            <th>Nome</th>
+                            <th>Estado</th>
+                            <th>Admin?</th>
                         </tr>
                     </thead>
                     <tbody>
+                        {% for user in users%}
                         <tr>
-                            <td>==EMAIL DO USUÁRIO==</td>
-                            <td>==USERNAME DO USUÁRIO==</td>
-                            <td>==ESTADO DO USUÁRIO==</td>
-                            <td>==USUÁRIO É ADMIN==</td>
+                            <td>{{user.email}}</td>
+                            <td>{{user.name}}</td>
+                            <td>{{user.state}}</td>
+                            <td>{{user.is_admin}}</td>
                         </tr>
+                        {% endfor %}
                     </tbody>
                 </table>
             </div>
@@ -40,12 +42,14 @@
                         </tr>
                     </thead>
                     <tbody>
+                        {% for proj in projs%}
                         <tr>
-                            <td>==NOME DO PROJETO==</td>
-                            <td>==SSH DO PROJETO==</td>
-                            <td>==USERNAME DO DONO DO PROJETO==</td>
-                            <td>==CAMINHO DO PROJETO==</td>
+                            <td>{{proj.name}}</td>
+                            <td>{{proj.ssh_url_to_repo}}</td>
+                            <td>{{proj.owner.name}}</td>
+                            <td>{{proj.web_url}}</td>
                         </tr>
+                        {% endfor %}
                     </tbody>
                 </table>
             </div>
