--- a/dashboard/templates/base.html
+++ b/dashboard/templates/base.html
@@ -28,9 +28,11 @@
                     <li><a href="/docker">Docker</a></li>
                     <li><a href="/gitlab">Gitlab</a></li>
                 </ul>
+                {% if session %}
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#">Deslogar</a></li>
                 </ul>
+                {% endif %}
             </div>
         </div>
     </nav>
