--- a/dashboard/templates/index.html
+++ b/dashboard/templates/index.html
@@ -1,6 +1,11 @@
 {% extends "base.html" %}
 {% block title %}Login{% endblock title %}
 {% block content %}
+
+<!-- Validando a sessão -->
+{% if session %}
+                    
+{% else %}
 <div class="container">
     <div class="row">
         <div class="col-sm-12 col-md-6 col-md-offset-3">
@@ -9,14 +14,14 @@
                     <h1 class="panel-title clearfix">Bem vindo</h1>
                 </div>
                 <div class="panel-body">
-                    <form>
+                    <form action="/" method="POST">
                         <div class="form-group">
                             <label for="exampleInputEmail1">Email address</label>
-                            <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+                            <input name="email" type="email" class="form-control" placeholder="Email">
                         </div>
                         <div class="form-group">
                             <label for="exampleInputPassword1">Password</label>
-                            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                            <input name="password" type="password" class="form-control" placeholder="Password">
                         </div>
                         <button type="submit" class="btn btn-primary pull-right">Submit</button>
                     </form>
@@ -25,4 +30,5 @@
         </div>
     </div>
 </div>
+{% endif %}
 {% endblock content %}
