--- a/dashboard/templates/base.html
+++ b/dashboard/templates/base.html
@@ -23,14 +23,15 @@
                 <a class="navbar-brand" href="/">TDB</a>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <!-- Não aparece se não estiver logado -->
+                {% if session["auth"] %}
                 <ul class="nav navbar-nav">
                     <li><a href="/jenkins">Jenkins</a></li>
                     <li><a href="/docker">Docker</a></li>
                     <li><a href="/gitlab">Gitlab</a></li>
                 </ul>
-                {% if session %}
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">Deslogar</a></li>
+                    <li><a href="/logout">Deslogar</a></li>
                 </ul>
                 {% endif %}
             </div>
